deployment/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: simple-web
  labels:
    app: simple-web
spec:
  replicas: 2
  selector:
    matchLabels:
      app: simple-web
  template:
    metadata:
      labels:
        app: simple-web
    spec:
      containers:
      - name: busybox
        image: busybox:1.36
        args: ["sh", "-c", "mkdir -p /www && echo '<h1>Site is working fine from EKS cluster</h1>' > /www/index.html && httpd -f -p 8080 -h /www & sleep 3600"]
        ports:
        - containerPort: 8080
