deployment/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: simple-web-svc
spec:
  selector:
    app: simple-web
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8080
